--- a/custom.css
+++ b/custom.css
@@ -1,13 +1,21 @@
+
 body {
   width: 100%;
   height: 100%;
   background-image: url("img/Background/Football-Stadium-background.jpg");
+  /* background-image: url("img/Background/bg2.png"); */
   background-size: cover;
   background-attachment: fixed;
   margin: 0;
   padding: 0;
 }
-
+/* #page1{
+  position: fixed;
+  top: 1%;
+  bottom: 5%;
+  left: 10%;
+  right: 10%;
+} */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -58,17 +66,17 @@ input[type="number"] {
   background-color: #ff00005e;
 } */
 .col-sm-6 .separator_small {
-  font-size: 34px;
-  color: white;
-  text-shadow: 1px 1px #000;
-}
-.separator_medium {
   font-size: 45px;
   color: white;
   text-shadow: 1px 1px #000;
 }
+.separator_medium {
+  font-size: 60px;
+  color: white;
+  text-shadow: 1px 1px #000;
+}
 .separator_large {
-  font-size: 75px;
+  font-size: 90px;
   color: white;
   text-shadow: 1px 1px #000;
 }
@@ -126,12 +134,53 @@ h1:after {
   width: 75px;
   margin-bottom: 0.25em;
 }
+.img{
+  text-align: center;
+}
+.name1{
+  text-shadow: 1px 1px 2px #000000;
+  position: relative;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 300px;
+  /* width:100%; */
+  text-align: center;
+  margin: auto;
+  white-space: nowrap;
+  padding-bottom: 13px;
+}
 
 /* //////////////////////////// */
 
 .table1{
   padding: 20px 0;
+  text-align: center;
 }
 .table1 table{
-  background:darkgoldenrod;
+  background:rgba(99, 0, 0, 0.568);
+  color: #fff;
+}
+
+.table1 tbody td{
+  background:rgba(29, 47, 105, 0.459);
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+  
+}
+
+
+.main-heading{
+  margin-top: 20px;
+}
+
+
+#loader{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: #333333 url('https://codemyui.com/wp-content/uploads/2019/11/Soccer-Ball-Hexagon-Pattern-Loader.gif') no-repeat center;
+	z-index: 999;
 }
