--- a/custom.css
+++ b/custom.css
@@ -203,7 +203,8 @@ input[type="number"] {
 #loader{
 	position: fixed;
 	width: 100%;
-	height: 100vh;
+  margin-top: -25px;
+	height: 110vh;
 	background: #333333 url('https://codemyui.com/wp-content/uploads/2019/11/Soccer-Ball-Hexagon-Pattern-Loader.gif') no-repeat center;
 	z-index: 999;
 }
